# lamadava-docs

./: .gitignore  pyproject.toml
docs/source/: a1.rst  api.rst  gql.rst  index.rst  python.rst  rest.rst  rest_a1.rst  rest_gql.rst  s1.rst  v1.rst
docs/source/rest/: a1.rst  index.rst
