[tool.poetry]
name = "lamadava"
version = "0.1.0"
description = ""
authors = ["Lamadava <admin@lamadava.com>"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lamadava"
authors = [{name = "Lamadava", email = "admin@lamadava.com"}]
dynamic = ["version", "description"]
